--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,12 +34,11 @@
         <div class="container">
           <div class="site">
             <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <ul class="main-navigation">
-                <li><a href="{{ root_url }}/">Home</a></li>
-                <li><a href="{{ root_url }}/categories/best-of/">Best Of</a></li>
-                <li><a href="{{ root_url }}/me/">About Allen</a></li>
+                <li><a href="{{ root_url }}/">Allen Pike</a></li>
+                <li><a href="{{ root_url }}/me/">About</a></li>
                 <li><a href="http://www.twitter.com/apike/">@apike</a></li>
+                <li><a href="http://www.steamclock.com/">Steamclock</a></li>
               </ul>
             </div>
 
@@ -48,7 +47,7 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Copyright © 2013 Allen Pike
+                  Copyright © 2013 Allen Pike - <a href='/feed/'>Articles RSS</a>
                 </p>
               </div>
             </div>
