--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
+        <title>{{ page.title }} - Allen Pike</title>
         <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
@@ -11,6 +11,8 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
+
+        <link rel="alternate" type="application/atom+xml" href="/feed/" title="Atom feed">
 
         <script type="text/javascript" src="//use.typekit.net/cil6skv.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -47,7 +49,7 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  Copyright © 2013 Allen Pike - <a href='/feed/'>Articles RSS</a>
+                  © 2013 Allen Pike &mdash; <a href='/feed/'>Subscribe</a> &mdash; <a href='mailto:comments@allenpike.com'>comments@allenpike.com</a>
                 </p>
               </div>
             </div>
