--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@
 html, body { height: 100%; }
 
 body {
-  background-color: #FFF;
+  background-color: #fcfafc;
+  color: #222;
   font-size: 22px;
   line-height: 32px;
   font-family: ff-meta-web-pro, Helvetica, Arial, sans-serif;
@@ -33,8 +34,8 @@ h1, h2, h3, h4, h5 {line-height: 64px;}
 h1 { margin: 24px 0px; }
 p { margin: 1em 0; }
 
-a         { color: #9000c9; text-decoration: none;}
-a:hover   { color: #9000c9; text-decoration: underline; }
+a         { color: #8000b3; text-decoration: none;}
+a:hover   { color: #8000b3; text-decoration: underline; }
 a:visited { color: #7500a3; }
 
 table {
@@ -71,17 +72,18 @@ img {
   list-style: none;
   margin-left: 0;
   margin: 24px 0px;
-  border-left: 1px solid #7500a3;
-  border-right: 1px solid #7500a3;
+  border-left: 1px solid #a800ea;
+  border-right: 1px solid #a800ea;
   font-family: "adelle-n1", adelle, serif;
 }
 
 .footer {
   font-family: adelle, serif;
-  border-left: 1px solid #7500a3;
-  border-right: 1px solid #7500a3;
+  border-left: 1px solid #a800ea;
+  border-right: 1px solid #a800ea;
   margin-top: 2em;
   text-align: center;
+  font-size: 0.8em;
 }
 
 .main-navigation li {
