More mobile, etc.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }} - Allen Pike</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=600, maximum-scale=1.2" />
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
@@ -49,7 +49,7 @@
             <div class="footer">
               <div class="contact">
                 <p>
-                  © 2013 Allen Pike &mdash; <a href='/feed/'>Subscribe</a> &mdash; <a href='mailto:comments@allenpike.com'>comments@allenpike.com</a>
+                  © 2013 Allen Pike &ndash; <a href='/feed/'>Subscribe</a> &ndash; <a href='mailto:comments@allenpike.com'>comments@allenpike.com</a>
                 </p>
               </div>
             </div>
