Ready for prime time.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,13 +46,12 @@
 
                 {{ content }}
 
-            <div class="footer">
-              <div class="contact">
-                <p>
-                  © 2013 Allen Pike &ndash; <a href='/feed/'>Subscribe</a> &ndash; <a href='mailto:comments@allenpike.com'>comments@allenpike.com</a>
-                </p>
-              </div>
-            </div>
+                <ul class="footer">
+                  <li>© 2013 Allen Pike</li>
+                  <li><a href='/feed/'>Subscribe</a></li>
+                  <li><a href='http://www.twitter.com/apike/'>Follow</a>
+                  <li><a href='mailto:comments@allenpike.com'>Email</a></li>
+                </ul>
           </div>
         </div> <!-- /container -->
 
