Add rsync, htaccess, 404, analytics, somehow broke jekyll serving

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
         <script type="text/javascript">
           var _gaq = _gaq || [];
-          _gaq.push(['_setAccount', '{{ site.google_analytics_tracking_id }}']);
+          _gaq.push(['_setAccount', 'UA-585700-2']);
           _gaq.push(['_trackPageview']);
 
           (function() {
