--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }} - Allen Pike</title>
+        {% if page.fulltitle %}
+          <title>{{page.fulltitle}}</title>
+        {% else %}
+          <title>{{ page.title }} - Allen Pike</title>
+        {% endif %}
         <meta name="viewport" content="width=600, maximum-scale=1.2" />
 
         <!-- syntax highlighting CSS -->
