Posts up to Jan 2017 and initial mobile layout work.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <meta name="twitter:image"        content="{{ site.baseurl }}{{ page.image }}" />
         {% endif %}
 
-        <meta name="viewport" content="width=600, maximum-scale=1.2" />
+        <meta name="viewport" content="width=device-width">
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
@@ -66,17 +66,18 @@
               </ul>
             </div>
 
+                {{ content }}
+
             <div id='fusionparent'>
               <script type="text/javascript" src="//cdn.fusionads.net/fusion.js?zoneid=1332&serve=C6SDP2Y&placement=allenpike" id="_fusionads_js"></script>
             </div>
 
-                {{ content }}
-
                 <ul class="footer">
                   <li>© Allen Pike</li>
-                  <li><a href='/feed/'>Subscribe</a></li>
-                  <li><a href='http://www.twitter.com/apike/'>Follow</a>
-                  <li><a href='mailto:comments@allenpike.com'>Email</a></li>
+                  <li><a href='https://feed.press/e/mailverify?feed_id=allenpike'>Newsletter</a></li>
+                  <li><a href='/feed/'>RSS</a></li>
+                  <li><a href='http://www.twitter.com/apike/'>Twitter</a>
+                  <li><a href='mailto:comments@allenpike.com'>Contact</a></li>
                 </ul>
           </div>
         </div> <!-- /container -->
