--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,13 +56,14 @@
           <div class="site">
             <div class="header">
               <ul class="main-navigation">
-                <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">Allen Pike</a>
-                </li>
                 <li {% if page.isHome %} class="active" {% endif %}>
-                  <a href="{{ root_url }}/">Articles</a>
+                  <a href="{{ root_url }}/">Allen Pike</a>
                 </li>
-                <li><a href="http://www.twitter.com/apike/">@apike</a></li>
-                <li><a href="http://www.steamclock.com/">Steamclock</a></li>
+                <li><a href="/archive/">Archive</a>
+                <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
+                </li>
+                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
+                <li {% if page.isContact %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
               </ul>
             </div>
 
@@ -72,13 +73,19 @@
               <script type="text/javascript" src="//cdn.fusionads.net/fusion.js?zoneid=1332&serve=C6SDP2Y&placement=allenpike" id="_fusionads_js"></script>
             </div>
 
-                <ul class="footer">
-                  <li>© Allen Pike</li>
-                  <li><a href='https://feed.press/e/mailverify?feed_id=allenpike'>Newsletter</a></li>
-                  <li><a href='/feed/'>RSS</a></li>
-                  <li><a href='http://www.twitter.com/apike/'>Twitter</a>
-                  <li><a href='mailto:comments@allenpike.com'>Contact</a></li>
-                </ul>
+              <ul class="footer">
+                <li {% if page.isHome %} class="active" {% endif %}>
+                  <a href="{{ root_url }}/">Allen Pike</a>
+                </li>
+                <li><a href="/archive/">Archive</a>
+                <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
+                </li>
+                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
+                <li {% if page.isContact %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
+              </ul>
+
+              <p style="text-align: center; opacity: 0.8; font-size: 0.8em"><a href="http://www.steamclock.com/">Steamclock</a> &bull; <a href="http://www.twitter.com/apike/">@apike</a> &bull; © Allen Pike. </p>
+
           </div>
         </div> <!-- /container -->
     </body>
