--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,8 @@ html, body { height: 100%; }
 body {
   background-color: #fcfafc;
   color: #222;
-  font-size: 22px;
-  line-height: 32px;
+  font-size: 20px;
+  line-height: 30px;
   font-family: ff-meta-web-pro, Helvetica, Arial, sans-serif;
 }
 
@@ -32,13 +32,13 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 42px;
-  line-height: 48px;
+  font-size: 38px;
+  line-height: 46px;
   margin: 10px 0;
 }
 
 h2, h3 {
-  font-size: 32px; line-height: 40px;
+  font-size: 30px; line-height: 38px;
 }
 
 
@@ -56,7 +56,7 @@ table {
 
 
 .container {
-  max-width: 750px;
+  max-width: 720px;
   min-width: 320px;
   margin: 0px auto;
   padding: 0 2em 2em 2em;
@@ -292,6 +292,7 @@ blockquote {
   /* Hanging indent for wrapping */
   padding-left: 1em;
   text-indent: -1em;
+  margin-bottom: 0.25em;
 }
 
 .archive li span {
