Contact and subscribe polish.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,8 +62,8 @@
                 <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Archive</a>
                 <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
                 </li>
-                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
                 <li {% if page.isContact %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
+                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
               </ul>
             </div>
 
@@ -80,11 +80,11 @@
                 <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Archive</a>
                 <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
                 </li>
-                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
                 <li {% if page.isContact %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
+                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
               </ul>
 
-              <p style="text-align: center; opacity: 0.8; font-size: 0.8em"><a href="http://www.steamclock.com/">Steamclock</a> &bull; <a href="http://www.twitter.com/apike/">@apike</a> &bull; © Allen Pike. </p>
+              <p style="text-align: center; opacity: 0.8; font-size: 0.8em">© Allen Pike. See also <a href="http://www.twitter.com/">Twitter</a> and <a href="http://www.steamclock.com/">Steamclock</a>.</p>
 
           </div>
         </div> <!-- /container -->
