--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ li.active {
 
 .main-navigation, .footer {
   list-style: none;
-  font-size: 25px;
+  font-size: 22px;
   margin-left: 0;
   margin: 2em 0px;
   font-family: "adelle-n1", adelle, serif;
@@ -170,8 +170,12 @@ blockquote {
   color: black;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 475px) {
   /* phone */ 
+
+  body {
+    font-size: 18px; /* Slightly smaller to maintain reasonable line count */
+  }
 
   body .container {
     padding-left: 20px;
@@ -271,6 +275,35 @@ blockquote {
   border-left: 2px solid #ff8315;
 }
 
+form.newsletter input {
+  font-size: 18px;
+  font-family: ff-meta-web-pro, Helvetica, Arial, sans-serif; 
+  padding: 2px 6px 3px 6px;
+  border: 1px solid #ccc;
+  -webkit-appearance: button;
+  box-sizing: border-box;
+}
+
+form.newsletter {
+  margin: 0px auto;
+  width: 420px;
+}
+
+form.newsletter input[type="text"] {
+  width: 250px;
+  height: 40px;
+  border-radius: 4px 0 0 4px;
+}
+
+form.newsletter input[type="submit"] {
+  width: 150px;
+  height: 40px;
+  background-color: #ac36db;
+  color: #FFFFFF;
+  border-radius: 0 4px 4px 0;
+  border-color: #444;
+  margin-left:-6px;
+}
 
 /* Home */
 
