--- a/css/main2.css
+++ b/css/main2.css
@@ -17,7 +17,7 @@ body {
   color: #222;
   font-size: 20px;
   line-height: 30px;
-  font-family: "ff-meta-web-pro", Georgia;
+  font-family: "ff-meta-web-pro", Helvetica, sans-serif;
   font-weight: 400;
 }
 
@@ -90,7 +90,7 @@ li.active {
   font-weight: bold;
 }
 
-.main-nav, .footer-nav {
+.navigation {
   list-style: none;
   font-size: 22px;
   margin-left: 0;
@@ -102,28 +102,25 @@ li.active {
   padding: 11px 14px;
 }
 
-.footer-nav {
+.footer.navigation {
   clear: both;
 }
 
 
-.main-nav li, .footer-nav li {
+.navigation li {
   display: inline;
   margin-left: 1.0em;
   padding-bottom: 4px;
 }
 
-li.sitename {
-  font-family: "skolar-sans-latin", sans-serif;
+a.sitename {
+  font-family: "skolar-sans-latin", Helvetica, sans-serif;
   font-weight: 800;
   padding-bottom: 0px;
   top: -2px;
   position: relative;
   float: left;
   margin-left: 0px;
-}
-
-li.sitename a {
   font-size: 28px;
   font-weight: 800;
 }
@@ -138,6 +135,10 @@ blockquote {
   border-left: 1px solid #8400b8;
 }
 
+img.side {
+  max-width: 50%;
+}
+
 /*****************************************************************************/
 /*
 /* Posts
@@ -149,12 +150,18 @@ blockquote {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
+  max-width: 100%;
 }
 
 .post code {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .2em;
+}
+
+.post pre, .post code {
+  white-space: pre-wrap;
+  max-width: 100%;
 }
 
 .post pre code {
@@ -192,7 +199,30 @@ blockquote {
   color: black;
 }
 
-@media (max-width: 475px) {
+@media (max-width: 500px) {
+
+  .navigation {
+    padding-bottom: 6px;
+  }
+
+  .navigation ul {
+    clear: left;
+    margin: 0px;
+    padding: 0px;
+    text-align: right;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+
+  h2, #recent h2 {
+    font-size: 23px;
+  }
+
+}
+
+@media (max-width: 650px) {
   /* phone */ 
 
   body {
@@ -208,9 +238,14 @@ blockquote {
     margin: 0px;
   }
 
-  .main-nav, .footer-nav {
+  .navigation {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .navigation li {
+    font-size: 18px;
+    margin-left: 12px;
   }
 }
 
@@ -312,27 +347,33 @@ form.newsletter input {
   border: 1px solid #ccc;
   -webkit-appearance: button;
   box-sizing: border-box;
+  width: 45%;
 }
 
 form.newsletter {
-  margin: 0px auto;
-  width: 420px;
+  text-align: center;
 }
 
 form.newsletter input[type="text"] {
-  width: 250px;
+  max-width: 250px;
   height: 40px;
   border-radius: 4px 0 0 4px;
+  font-family: "ff-meta-web-pro", Helvetica, sans-serif;
 }
 
 form.newsletter input[type="submit"] {
-  width: 150px;
+  max-width: 150px;
   height: 40px;
   background-color: #ac36db;
   color: #FFFFFF;
   border-radius: 0 4px 4px 0;
   border-color: #444;
   margin-left:-6px;
+  font-family: "ff-meta-web-pro", Helvetica, sans-serif;
+}
+
+p.meta {
+  color: #666;
 }
 
 /* Home */
@@ -342,8 +383,15 @@ form.newsletter input[type="submit"] {
 }
 
 #recent h2 {
-  font-size: 30px;
+  font-size: 27px;
   font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 4px;
+}
+
+#recent h2 a:link, #recent h2 a:visited {
+  /* A bit less vibrant */
+   color: #8c00a8;
 }
 
 #recent .date {
@@ -364,4 +412,10 @@ form.newsletter input[type="submit"] {
 
 .archive li span {
   color: #444;
+}
+
+.prologue {
+  text-align: center;
+  opacity: 0.8;
+  font-size: 0.8em;
 }
