Recent blog posts.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -87,7 +87,7 @@
                 </ul>
               </div>
 
-              <p class="prologue">© Allen Pike. See also <a href="http://www.twitter.com/">Twitter</a> and <a href="http://www.steamclock.com/">Steamclock</a>.</p>
+              <p class="prologue">© Allen Pike. See also <a href="http://www.twitter.com/apike/">Twitter</a> and <a href="http://www.steamclock.com/">Steamclock</a>.</p>
 
         </div> <!-- /container -->
     </body>
