Posts to May 2018.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
             </div>
 
             <div id='fusionparent'>
-              <script type="text/javascript" src="//cdn.fusionads.net/fusion.js?zoneid=1332&serve=C6SDP2Y&placement=allenpike" id="_fusionads_js"></script>
+              <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CKYIC2JJ&placement=allenpike" id="_carbonads_js"></script>
             </div>
 
               <div class="footer navigation">
