--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1><a href='.'>{{ page.title }}</a></h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<p class="meta">{{ page.date | date: "%B %-d, %Y" }}</p>
 
 {% if page.categories.last == "sarcastic news" %}
 	<p class='warning'>This an old, sarcastic news post from when I was in college. I apologise.</p>
