--- a/css/main2.css
+++ b/css/main2.css
@@ -227,13 +227,13 @@ div.centered p {
   line-height: 1.3;
 }
 
-.fusion-text {
+.carbon-text {
     color: #999;
     display:block;
     line-height: 1.5em;
 }
 
-#fusionads .fusion-poweredby {
+#carbonads .carbon-poweredby {
   color: black;
 }
 
