--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,9 @@ layout: default
 {% endif %}
 <p class="meta">{{ page.date | date: "%B %-d, %Y" }}</p>
 
-{% if page.categories.last == "sarcastic news" %}
+{% if page.categories.last == "Sarcastic News" %}
 	<p class='warning'>This an old, sarcastic news post from when I was in college. I apologise.</p>
-{% elsif page.categories.first == "faith" %}
+{% elsif page.categories.first == "Faith" %}
 	<p class='warning'>This an old status update on my web-based game <a href='/engineering-faith/'>Engineering Faith</a>.</p>
 {% endif %}
 
