Adding link posts. (#5)
Adding link posts.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,16 @@
 ---
 layout: default
 ---
-<h1><a href='.'>{{ page.title }}</a></h1>
+{% if page.link %}
+  <h1><a href='{{ page.link }}'>{{ page.title }} →</a></h1>
+{% else %}
+  <h1><a href='.'>{{ page.title }}</a></h1>
+{% endif %}
 <p class="meta">{{ page.date | date: "%B %-d, %Y" }}</p>
 
-{% if page.categories.last == "sarcastic news" %}
+{% if page.categories.last == "Sarcastic News" %}
 	<p class='warning'>This an old, sarcastic news post from when I was in college. I apologise.</p>
-{% elsif page.categories.first == "faith" %}
+{% elsif page.categories.first == "Faith" %}
 	<p class='warning'>This an old status update on my web-based game <a href='/engineering-faith/'>Engineering Faith</a>.</p>
 {% endif %}
 
