--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,9 @@
 ---
 layout: default
 ---
-{% if page.link %}
-  <h1><a href='{{ page.link }}'>{{ page.title }} →</a></h1>
-{% else %}
-  <h1><a href='{{ page.url }}'>{{ page.title }}</a></h1>
-{% endif %}
+<h1><a href='{{ page.url }}'>{{ page.title }}</a>
+{% if page.link %}<a class="link" href="{{ page.link }}">→</a>{% endif %}</h1>
+
 <p class="meta">{{ page.date | date: "%B %-d, %Y" }}</p>
 
 {% if page.categories.last == "Sarcastic News" %}
