--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,13 +40,9 @@
         <link rel="author" href="https://plus.google.com/115189793104525758622" />
 
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-585700-2', 'auto');
-          ga('send', 'pageview');
+          <!-- Fathom - beautiful, simple website analytics -->
+          <script src="https://cdn.usefathom.com/script.js" data-site="FATFGKEE" defer></script>
+          <!-- / Fathom -->
 
         </script>
 
