--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,12 +39,9 @@
         <script>try{Typekit.load({ async: false });}catch(e){}</script>
         <link rel="author" href="https://plus.google.com/115189793104525758622" />
 
-        <script>
-          <!-- Fathom - beautiful, simple website analytics -->
-          <script src="https://cdn.usefathom.com/script.js" data-site="FATFGKEE" defer></script>
-          <!-- / Fathom -->
-
-        </script>
+        <!-- Fathom - cookieless analytics -->
+        <script src="https://cdn.usefathom.com/script.js" data-site="FATFGKEE" defer></script>
+        <!-- / Fathom -->
 
     </head>
     <body>
