--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
         <link rel="author" href="https://plus.google.com/115189793104525758622" />
 
         <!-- Fathom - cookieless analytics -->
-        <script src="https://cdn.usefathom.com/script.js" data-site="FATFGKEE" defer></script>
+        <script src="https://smelt.allenpike.com/script.js" data-site="FATFGKEE" defer></script>
         <!-- / Fathom -->
 
     </head>
