--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,10 +50,9 @@
             <div class="header navigation">
               <a class="sitename" href="{{ root_url }}/">Allen Pike</a>
               <ul>
-                <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Archive</a>
+                <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
                 <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
                 </li>
-                <li {% if page.isContact %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
                 <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
               </ul>
             </div>
@@ -71,15 +70,14 @@
               <div class="footer navigation">
                 <a href="{{ root_url }}/" class="sitename">Allen Pike</a>
                 <ul>
-                <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Archive</a>
+                <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
                 <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
                 </li>
-                <li {% if page.isContact %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
                 <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
                 </ul>
               </div>
 
-              <p class="prologue">© Allen Pike. See also <a href="http://www.twitter.com/apike/">Twitter</a> and <a href="http://www.steamclock.com/">Steamclock</a>.</p>
+              <p class="prologue">© Allen Pike. You can find me <a href="http://www.twitter.com/apike/">on Twitter</a>, <a href="/contact/">contact me</a>, or check out <a href="http://www.steamclock.com/">Steamclock</a>.</p>
 
         </div> <!-- /container -->
     </body>
