--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
                 <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
                 <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
                 </li>
-                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
+                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Follow</a>
               </ul>
             </div>
 
@@ -73,7 +73,7 @@
                 <li {% if page.isArchive %} class="active" {% endif %}><a href="/archive/">Articles</a>
                 <li {% if page.isMe %} class="active" {% endif %}>    <a href="{{ root_url }}/me/">About</a>
                 </li>
-                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Subscribe</a>
+                <li {% if page.isSubscribe %} class="active" {% endif %}><a href="/subscribe/">Follow</a>
                 </ul>
               </div>
 
