--- a/css/main2.css
+++ b/css/main2.css
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5 {
 }
 
 h1 {
-  font-size: 38px;
+  font-size: 42px;
   line-height: 46px;
   margin: 10px 0;
 }
@@ -56,6 +56,16 @@ table {
   font: 100%;
 }
 
+p.summary {
+  font-size: 24px;
+}
+
+hr.subtle {
+  border-color: #eae7eb;
+  margin: 2em 0;
+  border-width: 1px 0px 0px 0px;
+  width: 100%;
+}
 
 .container {
   max-width: 730px;
@@ -65,7 +75,7 @@ table {
 }
 
 #content {
-  margin: 0px 14px;
+  margin: 70px 14px 0px 14px;
 }
 
 ul, ol {
