Improvements to sharing.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,19 +9,19 @@
           <title>{{ page.title }} - Allen Pike</title>
         {% endif %}
 
-        {% if page.summary and page.image and page.title %}
+        {% if page.summary and page.title %}
         <meta property="og:site_name" content="Allen Pike" />
         <meta property="og:title" content="{{ page.title }}" />
         <meta property="og:type" content="article" />
         <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
-        <meta property="og:image" content="{{ site.url }}{{ page.image }}" />
+        <meta property="og:image" content="{{ site.url }}{{ page.image | defaultshareimg }}" />
         <meta property="og:description" content="{{ page.summary }}" />
         
         <meta name="twitter:card"         content="summary" />
         <meta name="twitter:site"         content="@apike" />
         <meta name="twitter:title"        content="{{ page.title }}" />
         <meta name="twitter:description"  content="{{ page.summary }}" />
-        <meta name="twitter:image"        content="{{ site.url }}{{ page.image }}" />
+        <meta name="twitter:image"        content="{{ site.url }}{{ page.image | defaultshareimg }}" />
         {% endif %}
 
         <meta name="viewport" content="width=device-width">
@@ -62,7 +62,7 @@
                 {{ content }}
 
             </div>
-            
+
               <div class="footer navigation">
                 <a href="{{ root_url }}/" class="sitename">Allen Pike</a>
                 <ul>
