--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,19 @@ layout: default
 </div>
 
 <div id="nextnav">
+{% if page.tags.size > 0 %}
+
+{%- capture page_tags -%}
+    {%- for tag in page.tags -%}
+    		{% assign tag_title = site.data.seriestitles[tag].title | default: tag %}
+        <a href="/series/{{ tag }}">{{ tag_title }}</a>
+        {% unless forloop.last %} &bull; {% endunless %}
+    {%- endfor -%} 
+{%- endcapture -%}
+{%- assign tags_list = page_tags | split:',' | sort -%}
+
+<p>Part of the series {{ tags_list }}.</p>
+{% endif %}
 	{% if page.next %}
 		<span id="next">← <a href="{{ page.next.url }}">{{page.next.title }}</a></span>
     {% endif %} &nbsp;
